--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ airflow/*
 
 # But do not ignore the dags folder
 !airflow/dags/
+
+# Ignore specific files/folders inside of the dags folder
+airflow/dags/__pycache__/
